fix: Petites corrections